Ajustes de diseño front-end
CONTI-45
- actualiza colores teniendo siguiendo la guia de marca

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -18,3 +18,36 @@
 .navbar-default {
   background-color: #1D428A;
 }
+
+.panel-primary > .panel-heading {
+  background-color: #1D428A;
+  border-color: #1D428A;
+  border-color: #1D428A;
+}
+
+.panel-primary {
+    border-color: #1D428A;
+}
+
+.panel-success > .panel-heading {
+    background-color: #BECD2E;
+    border-color: #BECD2E;
+}
+
+.panel-success {
+    border-color: #BECD2E;
+}
+
+.btn-success {
+    background-color: #BECD2E;
+    border-color: #BECD2E;
+}
+
+.btn-primary {
+    background-color: #1D428A;
+    border-color: #1D428A;
+}
+
+.a:hover {
+  background-color: #1D428A;
+}
